--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
-<body>
+<body class="relative min-h-screen flex flex-col text-white overflow-y-auto">
+    <div class="absolute inset-0 bg-black/40 -z-0"></div>
+    <main class="relative z-10 flex flex-col items-center text-center p-6 mt-32 space-y-8">
+
+        <h1 class="text-4xl md:text-6xl font-bold text-yellow-300 drop-shadow-lg">
+          🌌 Stellar Stories
+        </h1>
+        <p class="text-lg md:text-2xl text-gray-200 drop-shadow-md max-w-xl">
+            Exciting tales about the Sun, solar winds, and the magical lights in our sky!
+          </p>
+          <a href="./pages/Interactive/solarFlare.html"
+          class="bg-yellow-400 text-black px-6 py-3 rounded-xl text-lg font-bold hover:bg-yellow-300 transition transform hover:scale-105 drop-shadow-md">
+          Start the Journey 🚀
+        </a>
     
+      </main>
+    </body>
 </body>
 </html>
