story1 page craeted

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Story page</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
@@ -17,7 +17,7 @@
         <p class="text-lg md:text-2xl text-gray-200 drop-shadow-md max-w-xl">
             Exciting tales about the Sun, solar winds, and the magical lights in our sky!
           </p>
-          <a href="./pages/Interactive/solarFlare.html"
+          <a href="./pages/stories/story1.html"
           class="bg-yellow-400 text-black px-6 py-3 rounded-xl text-lg font-bold hover:bg-yellow-300 transition transform hover:scale-105 drop-shadow-md">
           Start the Journey 🚀
         </a>
