--- a/pages/stories/story1.html
+++ b/pages/stories/story1.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Story Page</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
-<body>
-    
+
+<body class="relative min-h-screen flex flex-col text-white overflow-hidden">
+
+  <header
+    class="fixed top-6 left-1/2 transform -translate-x-1/2 w-11/12 md:w-3/4 flex justify-between items-center p-4 bg-black/50 rounded-xl shadow-xl z-30">
+    <h1 class="text-2xl md:text-3xl font-bold text-yellow-300 drop-shadow-lg">🌌 Stellar Stories</h1>
+    <nav class="space-x-6 md:space-x-8">
+      <a href="#" class="text-gray-200 hover:text-yellow-400 font-semibold transition">Home</a>
+      <a href="#" class="text-gray-200 hover:text-yellow-400 font-semibold transition">Next
+        Story</a>
+    </nav>
+  </header>
+
+ 
+
+  <div class="absolute inset-0 bg-black/40 -z-0"></div>
+
+  <main class="relative z-10 flex flex-col items-center justify-center text-center p-6 mt-20 space-y-8">
+
+
+    <div id="story-animation"
+      class="w-full max-w-4xl aspect-video bg-black/30 rounded-2xl flex items-center justify-center animate__animated animate__fadeIn animate__delay-1s overflow-hidden">
+      <!-- ضع هنا أي SVG، Canvas، أو فيديو للأنيميشن -->
+       
+    </div>
+
+    <a href="#"
+      class="bg-yellow-400 text-black px-8 py-4 rounded-2xl text-lg md:text-xl font-bold hover:bg-yellow-300 transition transform hover:scale-105 drop-shadow-md animate__animated animate__bounce animate__delay-2s">
+      Continue the Journey 
+    </a>
+
+  </main>
+
 </body>
+
 </html>
